--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,112 +1,42 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
+annotated-types==0.7.0  # If needed for Pydantic
 anyio==4.12.0
-attrs==23.2.0
-Automat==22.10.0
-Babel==2.10.3
-bcrypt==3.2.2
-blinker==1.7.0
+bcrypt==3.2.2  # For Passlib
 certifi==2023.11.17
-cffi==2.0.0
-chardet==5.2.0
+cffi==2.0.0  # For cryptography
 click==8.1.6
-cloud-init==25.2
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-constantly==23.10.4
-coverage==7.13.0
-cryptography==41.0.7
-dbus-python==1.3.2
-distro==1.9.0
-distro-info==1.7+build1
-dnspython==2.8.0
-ecdsa==0.19.1
-email-validator==2.3.0
+cryptography==41.0.7  # For python-jose
+ecdsa==0.19.1  # For python-jose
+email-validator==2.3.0  # If using email validation
 fastapi==0.124.2
-greenlet==3.3.0
+greenlet==3.3.0  # If using async
 h11==0.16.0
 -e git+https://github.com/samajid80/hackathon-todo.git@fee66f426af0ce914c236eec85a31a50e851afc4#egg=hackathon_todo_backend&subdirectory=backend
 httpcore==1.0.9
-httplib2==0.20.4
-httptools==0.7.1
 httpx==0.28.1
-hyperlink==21.0.0
 idna==3.6
-incremental==22.10.0
-iniconfig==2.3.0
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-librt==0.7.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mypy==1.19.0
-mypy_extensions==1.1.0
-netifaces==0.11.0
-oauthlib==3.2.2
+Jinja2==3.1.2  # If using templates
+MarkupSafe==2.1.5  # For Jinja2
 packaging==25.0
 passlib==1.7.4
-pathspec==0.12.1
-platformdirs==4.5.1
-pluggy==1.6.0
-psycopg2-binary==2.9.11
-pyasn1==0.6.1
-pyasn1-modules==0.2.8
-pycparser==2.23
-pycurl==7.45.3
+pathspec==0.12.1  # If needed
+platformdirs==4.5.1  # If needed
+psycopg2-binary==2.9.11  # For PostgreSQL
+pycparser==2.23  # For cffi
 pydantic==2.12.5
-pydantic-settings==2.12.0
+pydantic-settings==2.12.0  # If using settings
 pydantic_core==2.41.5
-Pygments==2.17.2
-PyGObject==3.48.2
-PyHamcrest==2.1.0
-PyJWT==2.7.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-pytest==9.0.2
-pytest-asyncio==1.3.0
-pytest-cov==7.0.0
-python-apt==2.7.7+ubuntu5.1
+PyJWT==2.7.0  # For auth
 python-dotenv==1.2.1
 python-jose==3.5.0
-python-multipart==0.0.20
-pytz==2024.1
-PyYAML==6.0.1
-readchar==4.2.1
-requests==2.31.0
-rich==13.7.1
-rsa==4.9.1
-ruff==0.14.8
-service-identity==24.1.0
-setuptools==80.9.0
-shellingham==1.5.4
+python-multipart==0.0.20  # For file uploads
+rsa==4.9.1  # For python-jose
 six==1.16.0
-socksio==1.0.0
-specifyplus==0.0.19
 SQLAlchemy==2.0.45
 sqlmodel==0.0.27
 starlette==0.50.0
-systemd-python==235
-truststore==0.10.4
-Twisted==24.3.0
-typer==0.20.0
-typing-inspection==0.4.2
+typer==0.20.0  # If using CLI
 typing_extensions==4.15.0
-ubuntu-pro-client==8001
-unattended-upgrades==0.1
-urllib3==2.0.7
 uvicorn==0.38.0
-uvloop==0.22.1
-wadllib==1.3.6
-watchfiles==1.1.1
-websockets==15.0.1
-wheel==0.45.1
-zope.interface==6.1
+uvloop==0.22.1  # For performance
+watchfiles==1.1.1  # For hot reload, optional in prod
+websockets==15.0.1  # If using websockets
